--- a/opencc-ovirt-pro/package.json
+++ b/opencc-ovirt-pro/package.json
@@ -1,13 +1,15 @@
 {
   "name": "opencc-ovirt-pro",
   "productName": "opencc-ovirt-pro",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "author": "wang_song <zero_ws@163.com>",
   "description": "面向企业用户的oVirt开源云桌面客户端windows版本，拥有企业级交互UI设计。",
   "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js",
+    "build:client": "node .electron-vue/build.js && electron-builder",
+    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/build.js",
     "build:linux": "cross-env BUILD_TARGET=linux node .electron-vue/`build`.js",
     "build:mas": "cross-env BUILD_TARGET=mas node .electron-vue/build.js",
@@ -19,6 +21,40 @@
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "postinstall": ""
+  },
+  "build": {
+    "productName": "opencc-ovirt-pro",
+    "appId": "com.example.yourapp",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "dist/electron/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "build/icons/icon.icns"
+    },
+    "win": {
+      "icon": "build/icons/icon.ico"
+    },
+    "linux": {
+      "icon": "build/icons/"
+    }
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -45,6 +81,7 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^2.0.4",
+    "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^12.1.0",
