--- a/opencc-ovirt-pro/package.json
+++ b/opencc-ovirt-pro/package.json
@@ -53,7 +53,7 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "icon": "build/icons/"
+      "icon": "build/icons/icon.png"
     }
   },
   "dependencies": {
